--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('images/medusatextback.gif');
+  background-image: url('images/medusatextback2.gif');
   background-repeat: no-repeat;
 }
 
@@ -10,7 +10,12 @@ body {
 
 section {
   text-align: center;
-  margin: 70px auto;
+/*  margin: 70px auto;*/
+  top: 70px;
+  width: 900px;
+  z-index: 2;
+  position: absolute;
+  transform: translate(30%);
 }
 
 .gorgons div {
@@ -19,12 +24,15 @@ section {
   border-radius: 8px;
   margin: 0 20px;
   display: inline-block;
+  position: relative;
 }
 
 .stoneTwo {
   background-image: url('http://i.imgur.com/NNjN1zm.gif');
   background-repeat: no-repeat;
   background-size: contain;
+  margin-left: 100px;
+  padding-left: 300px;
 }
 
 .twoLoad {
@@ -90,17 +98,16 @@ section {
 
 .welcome {
   color: #ffffff;
-  background: rgba(111, 111, 999, 0.65);
-  height: 445px;
+  background: rgba(000, 111, 999, 0.65);
+  height: 550px;
   width: 45%;
-  border-radius: 25px;
   position: absolute;
   z-index: 2;
-  left: 25%;
+  left: 20%;
   top: 10%;
   text-align: justify;
   font-size: 2em;
-  padding: 0 30px;
+  padding: 20px 100px;
   font-family: "Helvetica", san-serif;
   cursor: pointer;
   text-shadow: 1px 1px 30px rgba(000, 000, 999, .9);
@@ -116,4 +123,126 @@ section {
 .welcome p,
 h1 {
   margin: 50px auto;
+}
+
+.welcome h6 {
+  text-align: center;
+  font-style: italic;
+}
+[id='1'] img {
+  margin-left: -200px;
+  padding-right: 400px;
+}
+
+.number1 { 
+  z-index: -10;
+  position: absolute;
+  display: none; !important;
+  height: 50px;
+  left: 450px;
+  top: 70px;
+}
+
+.number2 { 
+  z-index: -10;
+  position: absolute;
+  display: none; !important;
+  height: 50px;
+  left:-30px;
+  top: 90px
+}
+
+.number3 { 
+  z-index: -10;
+  position: absolute;
+  display: none; !important;
+  height: 50px;
+  left:230px;
+  top: 100px;
+}
+
+.number4 { 
+  z-index: -10;
+  position: absolute;
+  display: none; !important;
+  height: 50px;
+  left: -40px;
+  top: 100px;
+}
+
+#blue {
+  text-align: center;
+  font-family: helvetica;
+  height: 200px;
+  width: 150px;
+  position: absolute;
+  z-index: -3;
+  left: 170px;
+  bottom:-70px;
+  display: none;
+}
+
+#rules img{
+  position: absolute;
+  top: 70px;
+  left: 230px;
+  height: 170px;
+  cursor: pointer;
+  transform: rotate(4deg);
+
+}
+
+.rules img {
+  position: absolute;
+  top: 70px;
+  left: 230px;
+  height: 170px;
+  cursor: pointer;
+  z-index: 5;
+  transform: rotate(4deg);
+  background: url('images/rules.gif');
+  background: no-repeat;
+
+}
+
+#winner {
+  height: 350px;
+  width: 450px;
+  transform: skewX(-20deg) translate(120%, 50%);
+  background: rgba(000,000,000,0.30);
+  display: none;
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  font-family: helvetica;
+  font-weight: bold;
+  font-size: 1.2em;
+
+}
+
+#loser {
+  height: 350px;
+  width: 450px;
+  transform: skewX(-20deg) translate(120%, 50%);
+  background: rgba(000,000,000,0.30);
+  display: none;
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  font-family: helvetica;
+  font-weight: bold;
+  font-size: 1.2em;
+
+}
+
+/*////////////////////////////////Media Query//////////////////////////////*/
+@media (max-width: 600px) {
+  .gorgons div {
+    height: 200px;
+    width: 240px;
+    border-radius: 8px;
+    margin: 0 20px;
+    display: inline-block;
+    background-size: 110%;
+  }
 }
