--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ section {
 }
 
 .stoneTwo {
-  background-image: url('http://i.imgur.com/NNjN1zm.gif');
+  background-image: url('https://i.imgur.com/NNjN1zm.gif');
   background-repeat: no-repeat;
   background-size: contain;
   margin-left: 100px;
@@ -36,7 +36,7 @@ section {
 }
 
 .twoLoad {
-  background-image: url('http://i.imgur.com/iboW7Kh.gif');
+  background-image: url('https://i.imgur.com/iboW7Kh.gif');
   background-repeat: no-repeat;
   background-size: contain;
   margin-left: 100px;
@@ -45,25 +45,25 @@ section {
 }
 
 .stoneUser {
-  background-image: url('http://i.imgur.com/ooH7aAK.gif');
+  background-image: url('https://i.imgur.com/ooH7aAK.gif');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .userLoad {
-  background-image: url('http://i.imgur.com/eBOZCIC.png');
+  background-image: url('https://i.imgur.com/eBOZCIC.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .stoneFive {
-  background-image: url('http://i.imgur.com/zfmHPwT.gif');
+  background-image: url('https://i.imgur.com/zfmHPwT.gif');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .fiveLoad {
-  background-image: url('http://i.imgur.com/lQISRvg.gif');
+  background-image: url('https://i.imgur.com/lQISRvg.gif');
   background-repeat: no-repeat;
   background-size: contain;
   padding-right: 10px;
@@ -71,26 +71,26 @@ section {
 }
 
 .stoneThree {
-  background-image: url('http://i.imgur.com/6N8Bmaq.png');
+  background-image: url('https://i.imgur.com/6N8Bmaq.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .threeLoad {
-  background-image: url('http://i.imgur.com/IGjKV3x.gif');
+  background-image: url('https://i.imgur.com/IGjKV3x.gif');
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
 }
 
 .stoneFour {
-  background-image: url('http://i.imgur.com/XqvazqV.gif');
+  background-image: url('https://i.imgur.com/XqvazqV.gif');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .fourLoad {
-  background-image: url('http://i.imgur.com/CGxDqvl.gif');
+  background-image: url('https://i.imgur.com/CGxDqvl.gif');
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
@@ -118,6 +118,7 @@ section {
   text-align: center;
   text-shadow: 1px 1px 40px rgba(000, 000, 999, .8);
   font-family: 'Playfair Display SC', serif;
+  font-style: italic;
 }
 
 .welcome p,
@@ -208,7 +209,7 @@ h1 {
 #winner {
   height: 350px;
   width: 450px;
-  transform: skewX(-20deg) translate(120%, 50%);
+  transform: skewX(-17deg) translate(120%, 50%);
   background: rgba(000,000,000,0.30);
   display: none;
   position: relative;
@@ -216,14 +217,16 @@ h1 {
   text-align: center;
   font-family: helvetica;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  text-decoration: none;
+  color: #000066;
 
 }
 
 #loser {
   height: 350px;
   width: 450px;
-  transform: skewX(-20deg) translate(120%, 50%);
+  transform: skewX(-17deg) translate(120%, 50%);
   background: rgba(000,000,000,0.30);
   display: none;
   position: relative;
@@ -231,8 +234,15 @@ h1 {
   text-align: center;
   font-family: helvetica;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  text-decoration: none;
+  color: #000066;
+}
 
+
+
+a {
+  text-decoration: none;
 }
 
 /*////////////////////////////////Media Query//////////////////////////////*/
